--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -344,7 +344,7 @@
     }
 }
 
-/* Hide visibility options to avoid confusion with rrze_newsletter_is_public meta toggle. */
+/* Hide visibility options to avoid confusion with a none public newsletter. */
 .edit-post-post-visibility {
     display: none;
 }
