--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -1,17 +1,18 @@
 :root {
     --rrze-newsletter-header-font: arial, sans-serif;
     --rrze-newsletter-body-font: georgia, serif;
-    --rrze-newsletter-max-width: 600px;
+    --rrze-newsletter-max-width: 680px;
 }
 
 .wp-block {
+    margin-left: auto;
+    margin-right: auto;
     max-width: var(--rrze-newsletter-max-width);
-    padding: 12px;
 }
 
 .editor-styles-wrapper {
     &.block-editor-writing-flow {
-        font-size: 16px;
+        font-size: 14px;
     }
 
     .editor-post-title {
@@ -20,13 +21,6 @@
     }
 
     .block-editor-block-list__layout {
-        --wp--preset--font-size--small: 12px;
-        --wp--preset--font-size--normal: 16px;
-        --wp--preset--font-size--medium: 16px;
-        --wp--preset--font-size--large: 24px;
-        --wp--preset--font-size--x-large: 36px;
-        --wp--preset--font-size--huge: 36px;
-
         &.is-root-container {
             padding-left: 0;
             padding-right: 0;
@@ -58,36 +52,39 @@
         }
 
         h1 {
-            font-size: 2.44em;
-            line-height: 1.24;
+            font-size: 32px;
+            line-height: 34px;
         }
 
         h2 {
-            font-size: 1.95em;
-            line-height: 1.36;
+            font-size: 28px;
+            line-height: 34px;
         }
 
         h3 {
-            font-size: 1.56em;
-            line-height: 1.44;
+            font-size: 24px;
+            line-height: 34px;
         }
 
         h4 {
-            font-size: 1.25em;
-            line-height: 1.6;
+            font-size: 20px;
+            line-height: 32px;
         }
 
         h5 {
-            font-size: 1em;
+            font-size: 18px;
+            line-height: 32px;
         }
 
         h6 {
-            font-size: 0.8em;
-            line-height: 1.56;
+            font-size: 14px;
+            line-height: 32px;
         }
 
         a {
+            color: inherit;
             font-family: inherit;
+            text-decoration: none;
         }
 
         code {
@@ -185,49 +182,6 @@
             margin: 4px;
             padding: 7px;
             width: 38px;
-        }
-
-        .wp-block-quote {
-            margin: 0 auto;
-
-            p {
-                margin: 0 0 12px;
-            }
-
-            &__citation {
-                color: #767676;
-                font-size: inherit;
-                font-style: italic;
-                margin-top: 0;
-                text-align: inherit;
-            }
-
-            &:not(.is-style-plain, .is-style-large) {
-                border: 0;
-                margin: 12px auto;
-                padding: 0;
-                padding-left: calc(36px + 0.25em);
-                position: relative;
-
-                &::before {
-                    background: currentcolor;
-                    bottom: 0;
-                    content: "";
-                    display: block;
-                    position: absolute;
-                    left: 12px;
-                    top: 0;
-                    width: 0.25em;
-                }
-
-                + .wp-block-quote:not(.is-style-plain, .is-style-large) {
-                    margin-top: 24px;
-                }
-            }
-
-            &.is-style-large {
-                padding: 12px;
-            }
         }
 
         .wp-block-heading {
