--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -179,7 +179,7 @@
         .wp-social-link {
             border-radius: 19px;
             height: 38px;
-            margin: 4px;
+            margin: 2px !important;
             padding: 7px;
             width: 38px;
         }
