--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -1,6 +1,6 @@
 :root {
-    --rrze-newsletter-header-font: arial, sans-serif;
-    --rrze-newsletter-body-font: georgia, serif;
+    --rrze-newsletter-header-font: Arial, Helvetica, sans-serif;
+    --rrze-newsletter-body-font: Arial, Helvetica, sans-serif;
     --rrze-newsletter-max-width: 680px;
 }
 
@@ -38,7 +38,7 @@
         .components-button,
         .block-editor-block-list__block .components-placeholder,
         .block-editor-block-list__block .components-placeholder div {
-            font-family: "Noto Serif", helvetica, arial, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         h1,
