--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -1,6 +1,8 @@
 :root {
     --rrze-newsletter-header-font: Arial, Helvetica, sans-serif;
     --rrze-newsletter-body-font: Arial, Helvetica, sans-serif;
+    --rrze-newsletter-link-color: inherit;
+    --rrze-newsletter-link-text-decoration: underline;
     --rrze-newsletter-max-width: 680px;
 }
 
@@ -89,9 +91,9 @@
         }
 
         a {
-            color: inherit;
+            color: var(--rrze-newsletter-link-color);
             font-family: inherit;
-            text-decoration: none;
+            text-decoration: var(--rrze-newsletter-link-text-decoration);
         }
 
         code {
